@@ -122,7 +122,7 @@ support. You can load TTF and FON fonts.
 
 <a name=SysFont><font size=+2><b>SysFont
 </b></font><br><font size=+1><tt>
-pygame.font.SysFont(name, size, bold=0, italic=0) -> Font
+pygame.font.SysFont(name, size, bold=False, italic=False) -> Font
 </tt></font><ul>
        This will search the system fonts for the given font
        name. You can also enable bold or italic styles, and
